# ksf-restful

./: .gitignore  .pre-commit-config.yaml  DATABASE_MIGRATION.md  Dockerfile  LOGGING.md  NEW_DICT_MODULE_GUIDE.md  POETRY.md  README.md  TREE_API_GUIDE.md  UPLOAD_API_GUIDE.md  UPLOAD_IMPLEMENTATION_SUMMARY.md  config.py  docker-compose.yml  env.example  manage.py  pyproject.toml  requirements.txt  run-app.sh  run.py  serialization_analysis.md  start.sh  test_count_fix.py  test_sorting_simple.py  test_tree_api.py  虚拟环境准备.sh
app/: __init__.py  swagger.py
app/api/v1/: __init__.py
app/api/v1/resources/: __init__.py  auth.py  dict.py  matrix_resources.py  posts.py  upload.py  users.py
app/dto/: __init__.py  common.py  dict.py  matrix_dto.py  upload_dto.py
app/errors/: handlers.py
app/models/: RcjMCClassifyBig.py  __init__.py  dict.py  model2db_tool.py  models_13jt.py  models_matrix3.py  models_matrix3Big.py  post.py  user.py
app/schemas/: __init__.py  dict.py  post.py  user.py
app/services/: __init__.py  base_service.py  dict_service.py  import_13jt_dynamic.py  matrix_service.py  upload_service.py
app/utils/: decorators.py  logger.py  middleware.py  pagination.py  response_builder.py  tool.py
sample/: API_TEST_README.md  USAGE.md  example_usage.py  quick_test.py  start_and_test.py  test_api_integration.py  test_logging.py  upload_demo.py
scripts/: setup_migration.py
tests/: README.md  conftest.py  test_api.py  test_dict.py  test_dto.py  test_service.py  test_upload.py
